<resources>
    <string name="app_name">FengShui_Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="message">Message</string>
    <string name="person">Person</string>
    <string name="about_us">About us</string>
    <string name="image">image</string>
    <string name="default_price">Price: </string>
    <string name="purchase">550 purchased</string>
    <string name="Category">Categories</string>
    <string name="show_all">Show all</string>
    <string name="products">1257 products</string>
    <string name="ranking">Ranking</string>
    <string name="more">More</string>
    <string name="type_here">Type message here</string>
    <string name="contact">Feel free to contact us now</string>
    <string name="cart_empty">Nothing to check out You may like to take a look in our categories</string>
    <string name="cart_empty_2">Nothing to check out\nYou may like to take a look in our categories</string>
    <string name="account">Account</string>
    <string name="defaultCartNumber">1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="available_quantities">Available quantities:</string>
    <string name="available_quantities_number">480</string>
    <string name="detail">Detail:</string>
    <string name="sample_details">Albert Einstein (/ˈaɪnstaɪn/ EYEN-styne;[4] German: [ˈalbɛʁt ˈʔaɪnʃtaɪn] (About this soundlisten); 14 March 1879 – 18 April 1955) was a German-born theoretical physicist,[5] widely acknowledged to be one of the greatest physicists of all time. Einstein is best known for developing the theory of relativity, but he also made important contributions to the development of the theory of quantum mechanics. Relativity and quantum mechanics are together the two pillars of modern physics.[3][6] His mass–energy equivalence formula E = mc2, which arises from relativity theory, has been dubbed "the world's most famous equation".[7] His work is also known for its influence on the philosophy of science.[8][9] He received the 1921 Nobel Prize in Physics "for his services to theoretical physics, and especially for his discovery of the law of the photoelectric effect",[10] a pivotal step in the development of quantum theory. His intellectual achievements and originality resulted in "Einstein" becoming synonymous with "genius".[11]</string>
    <string name="show_less">Show less</string>
    <string name="rating">Rating</string>
    <string name="rating_sample">4.2</string>
    <string name="reviews">1084 reviews</string>
    <string name="the_same_kind">THE SAME KIND</string>
    <string name="time_sample">13:12</string>
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount:</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>

    <string-array name="filter">
        <item>ALL</item>
        <item>Image</item>
        <item>5 star</item>
        <item>4 star</item>
        <item>3 star</item>
        <item>2 star</item>
        <item>1 star</item>
    </string-array>
    <string name="my_details">My details</string>
    <string name="slogan">Shopping for free</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">Or Sign In with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_account_has_been_verified_successfully">Your Account \nHas Been Verified Successfully</string>
    <string name="please_verify">Please verify</string>
    <string name="your">your</string>
    <string name="cell_number">Cell number</string>
    <string name="verify_content_text">Please click active in the email\nsent to your register email</string>
    <string name="via_sms_message">via SMS message or</string>
    <string name="change">
        <u>
            Change
        </u>
    </string>
    <string name="your_number">your number.</string>
    <string name="resend_otp">
        <u>
            Resend active email
        </u>
    </string>
    <string name="notify_time">7:17 10/10/2021</string>
    <string name="see_now">See now</string>
    <string name="notification">Notification</string>
    <string name="my_orders">My orders</string>
    <string name="pending">Pending</string>
    <string name="delivering">Delivering</string>
    <string name="confirmed">Confirmed</string>
    <string name="pass_order">Success</string>
    <string name="tap_to_view_detail">Tap to view detail</string>
    <string name="cancel_order">Cancel order</string>
    <string name="order_time">Order time:</string>
    <string name="status">Status:</string>
    <string name="address">Address</string>
    <string name="billing_items">Billing items</string>
    <string name="rating_now">Rating now</string>
    <string name="order_detail">Order detail</string>
    <string name="your_order_is_empty">Your order is empty</string>
    <string name="go_to_buy_now">go to buy now!</string>
    <string name="items">Items</string>
    <string name="you_want_to">You want to</string>
    <string name="order">order :(</string>
    <string name="order_cancel_text">Please let us know reason\nto make future shopping experiences\nbetter for you.</string>
    <string name="your_reason_here">Your reason here</string>
    <string name="your_order_cancel_successfully">Your order cancel successfully</string>
    <string name="order_confirm_text">We apologize for any\ninconvenience may was caused\nfor your experience</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="check_out_policy">By placing your order you agree to our terms and conditions, privacy and returns policies and consent to some of your data being stored by Aposs which may be used to make future shopping experiences better for you.</string>
    <string name="total">Total:</string>
    <string name="see_all_items_in_detail">
        <u>See all items in detail</u>
    </string>
    <string name="write_your_comment_here">Write your comment here!</string>
    <string name="add_image">Add image</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="my_address">My address</string>
    <string name="default_cart_number">1</string>
    <string name="default_address_guide">Tap to select default address</string>
    <string name="add_new_address_guide">Tap to add new address</string>
    <string name="loading_failed_x_x">Loading failed x.x</string>
    <string name="name_tag">Name</string>
    <string name="phone_tag">Phone</string>
    <string name="gender_tag">Gender</string>
    <string name="city_tag">City</string>
    <string name="district_tag">District</string>
    <string name="ward_tag">Ward</string>
    <string name="address_lane_tag">Address lane</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="check_out">Check out</string>
</resources>